--- a/yolov5/models/yolov5x-odc.yaml
+++ b/yolov5/models/yolov5x-odc.yaml
@@ -2,24 +2,23 @@
 
 # Parameters
 nc: 3  # number of classes
-# activation: nn.LeakyReLU(0.1)
 depth_multiple: 1.33  # model depth multiple
 width_multiple: 1.25  # layer channel multiple
 anchors:
-  - [5,17,  18,14,  9,30]  # P3/8
-  - [29,22, 20,37, 44,33]  # P4/16
-  - [38,61, 78,59, 135,81]  # P5/32
+  - [10,13, 16,30, 33,23]  # P3/8
+  - [30,61, 62,45, 59,119]  # P4/16
+  - [116,90, 156,198, 373,326]  # P5/32
 
 # YOLOv5 v6.0 backbone
 backbone:
   # [from, number, module, args]
   [[-1, 1, Conv, [64, 6, 2, 2]],  # 0-P1/2
-   [-1, 1, Conv, [128, 3, 2]],  # 1-P2/4
+   [-1, 1, ODConv_3rd, [128, 3, 2, 2]],  # 1-P2/4
    [-1, 3, C3, [128]],
    [-1, 1, Conv, [256, 3, 2]],  # P3/8
    [-1, 6, C3, [256]],  # 4 end backbone P3
    [-1, 1, Conv, [512, 3, 2]],  # P4/16
-   [-1, 9, C3, [512]],  # 6 end backbone P4
+   [-1, 1, ConvNextBlock, [512, 512, 9, 7]],  # 6 end backbone P4
    [-1, 1, Conv, [1024, 3, 2]],  # P5/32
    [-1, 3, C3, [1024]],
    [-1, 1, SPPF, [1024, 5]],  # 9
@@ -35,24 +34,18 @@ head:
    [-1, 1, Conv, [256, 1, 1]], # 14 head P4
    [-1, 1, nn.Upsample, [None, 2, 'nearest']],
    [[-1, 4], 1, Concat, [1]],  # cat backbone P3
-   [-1, 1, SPP, [256, [5, 9, 13]]],
-   [-1, 3, C3, [256, False]],
-   [-1, 1, CBAM, [256]],   # 19 (P3/8-small)
-   [-1, 1, Conv, [256, 3,2]],   # 20
+   [-1, 3, C3, [256, False]],  # 17 
+   [-1, 1, Conv, [256, 3,2]],  # 18 (P3/8-small)
 
-   [19, 1, Conv, [256, 3, 2]],
-   [[-1, 14, 6], 1, Concat, [1]],  # cat head P4
-   [-1, 1, SPP, [512, [3, 7, 11]]],
-   [-1, 3, C3, [512, False]],  # 24 (P4/16-medium)
-   [-1, 1, CBAM, [512]],  # 25
-   [-1, 1, Conv, [512, 1,2]],  # 26
+   [17, 1, Conv, [256, 1, 2]], # from last C3
+   [[-1, 14], 1, Concat, [1]],  # cat head P4
+   [-1, 3, C3, [512, False]],  # 21
+   [-1, 1, Conv, [512, 1,2]],  # 22 (P4/16-medium)
 
-   [25, 1, Conv, [512, 3, 2]],
+   [21, 1, Conv, [512, 3, 2]],  # from last C3
    [[-1, 10], 1, Concat, [1]],  # cat head P5
-   [-1, 1, SPP, [1024, [3, 5, 7]]],
-   [-1, 3, C3, [1024, False]],  # 30 (P5/32-large)
-   [-1, 1, CBAM, [1024]],
-   [-1, 1, Conv, [1024, 1,2]],  # 32
+   [-1, 3, C3, [1024, False]],
+   [-1, 1, Conv, [1024, 1,2]],  # 26 (P3/8-small)
 
-   [[20, 26, 32], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
+   [[18, 22, 26], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
   ]
