--- a/yolov5/models/yolov5x-tph-p2.yaml
+++ b/yolov5/models/yolov5x-tph-p2.yaml
@@ -2,13 +2,14 @@
 
 # Parameters
 nc: 3  # number of classes
-activation: nn.LeakyReLU(0.1)  # <----- Conv() activation used throughout entire YOLOv5 model
+# activation: nn.LeakyReLU(0.1)
 depth_multiple: 1.33  # model depth multiple
 width_multiple: 1.25  # layer channel multiple
 anchors:
-  - [10,13, 16,30, 33,23]  # P3/8
-  - [30,61, 62,45, 59,119]  # P4/16
-  - [116,90, 156,198, 373,326]  # P5/32
+  # - [7,9,  9,17,  17,15,  13,27] 
+  - [5,17,  18,14,  9,30]  # P3/8
+  - [29,22, 20,37, 44,33]  # P4/16
+  - [38,61, 78,59, 135,81]  # P5/32
 
 # YOLOv5 v6.0 backbone
 backbone:
@@ -19,7 +20,7 @@ backbone:
    [-1, 1, Conv, [256, 3, 2]],  # 3-P3/8
    [-1, 6, C3, [256]],
    [-1, 1, Conv, [512, 3, 2]],  # 5-P4/16
-   [-1, 9, CBAMC3, [512]],
+   [-1, 9, C3, [512]],
    [-1, 1, Conv, [1024, 3, 2]],  # 7-P5/32
    [-1, 3, C3TR, [1024]],
    [-1, 1, SPPF, [1024, 5]],  # 9
@@ -36,14 +37,31 @@ head:
    [-1, 1, nn.Upsample, [None, 2, 'nearest']],
    [[-1, 4], 1, Concat, [1]],  # cat backbone P3
    [-1, 3, C3, [256, False]],  # 17 (P3/8-small)
+   
+   [ -1, 1, Conv, [ 128, 1, 1 ] ],
+   [ -1, 1, nn.Upsample, [ None, 2, 'nearest' ] ],
+   [ [ -1, 2 ], 1, Concat, [ 1 ] ],  # cat backbone P2
+   [-1, 1, SPP, [128, [5, 9, 13]]],
+   [ -1, 3, C3, [ 128, False ] ],  #  (P2/4-xsmall)
+   [-1, 1, CBAM, [128]],           # 23
+
+   [ -1, 1, Conv, [ 128, 3, 2 ] ],
+   [ [ -1, 18, 4], 1, Concat, [ 1 ] ],  # cat head P3
+   [-1, 1, SPP, [256, [5, 9, 13]]],
+   [ -1, 3, C3, [ 256, False ] ],  # (P3/8-small)
+   [-1, 1, CBAM, [256]],          # 28
 
    [-1, 1, Conv, [256, 3, 2]],
-   [[-1, 14], 1, Concat, [1]],  # cat head P4
-   [-1, 3, C3, [512, False]],  # 20 (P4/16-medium)
+   [[-1, 14, 6], 1, Concat, [1]],  # cat head P4
+   [-1, 1, SPP, [512, [3, 7, 11]]],
+   [-1, 3, C3, [512, False]],  #  (P4/16-medium) 
+   [-1, 1, CBAM, [512]],       # 33
 
    [-1, 1, Conv, [512, 3, 2]],
    [[-1, 10], 1, Concat, [1]],  # cat head P5
-   [-1, 3, C3, [1024, False]],  # 23 (P5/32-large)
+   [-1, 1, SPP, [1024, [3, 5, 7]]],
+   [-1, 3, C3TR, [1024, False]],  #  (P5/32-large)
+   [-1, 1, CBAM, [1024]],        # 38
 
-   [[17, 20, 23], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
+   [[28, 33, 38], 1, Detect, [nc,anchors]],  # Detect(P3, P4, P5)
   ]
