--- a/yolov5/models/yolov5x-tph.yaml
+++ b/yolov5/models/yolov5x-tph.yaml
@@ -2,7 +2,7 @@
 
 # Parameters
 nc: 3  # number of classes
-# activation: nn.LeakyReLU(0.1)
+activation: nn.LeakyReLU(0.1)
 depth_multiple: 1.33  # model depth multiple
 width_multiple: 1.25  # layer channel multiple
 anchors:
@@ -21,7 +21,7 @@ backbone:
    [-1, 1, Conv, [512, 3, 2]],  # P4/16
    [-1, 9, C3, [512]],  # 6 end backbone P4
    [-1, 1, Conv, [1024, 3, 2]],  # P5/32
-   [-1, 3, C3, [1024]],
+   [-1, 3, C3TR, [1024]],
    [-1, 1, SPPF, [1024, 5]],  # 9
   ]
 
@@ -50,7 +50,7 @@ head:
    [25, 1, Conv, [512, 3, 2]],
    [[-1, 10], 1, Concat, [1]],  # cat head P5
    [-1, 1, SPP, [1024, [3, 5, 7]]],
-   [-1, 3, C3, [1024, False]],  # 30 (P5/32-large)
+   [-1, 3, C3TR, [1024, False]],  # 30 (P5/32-large)
    [-1, 1, CBAM, [1024]],
    [-1, 1, Conv, [1024, 1,2]],  # 32
 
