--- a/.gitignore
+++ b/.gitignore
@@ -16,15 +16,22 @@ yolov5/runs/*
 val_*
 val_*/*
 infer_*.sh
-!infer_batch.sh
 img2raw_*.py
 main_infer_*.py
 *.bak
 val2508
 val12
+val3000
 *_bak*
 testdata
 *.log
 logs/*
 rtdetr.py
 .pre-commit-config.yaml
+!.gitkeep
+rsync.sh
+byd
+ffmpeg_check.py
+back0*
+review0*
+eval_badcase.py
